# PhotonLab

./: .gitignore  LICENSE  README.md  package.json  vercel.json
rust-core/: Cargo.toml
rust-core/pkg/: package.json  photonlab_core.d.ts  photonlab_core.js  photonlab_core_bg.wasm  photonlab_core_bg.wasm.d.ts
rust-core/src/: cpml.rs  fdtd.rs  lib.rs  materials.rs  scenarios.rs  sources.rs
web/: eslint-output.txt  eslint-report.txt  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/scripts/: capture.js
web/src/: App.css  App.tsx
web/src/components/: Controls.css  Controls.tsx  EnergyMonitor.css  EnergyMonitor.tsx  ExportMenu.css  ExportMenu.tsx  FPSCounter.css  FPSCounter.tsx  InteractionLayer.css  InteractionLayer.tsx  ScenarioMenu.css  ScenarioMenu.tsx  SignalMonitor.css  SignalMonitor.tsx  SimCanvas.tsx  SpectrumMonitor.css  SpectrumMonitor.tsx  Toolbar.css  Toolbar.tsx
web/src/components/inspector/: SourceInspector.css  SourceInspector.tsx
web/src/components/layout/: DataPanel.tsx  Footer.css  Footer.tsx
web/src/hooks/: useDrawTool.ts  useSimulation.ts
