[package]
name = "photonlab-core"
version = "0.1.0"
edition = "2021"
authors = ["PhotonLab Team"]
description = "High-performance FDTD electromagnetic solver in Rust/Wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
