[package]
name = "photonlab-core"
version = "2.0.0"
edition = "2021"
authors = ["Mehmet Gümüş <github.com/SpaceEngineerSS>"]
description = "High-performance FDTD electromagnetic solver in Rust/Wasm - Engineering Suite"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
rustfft = "6.1"
num-complex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
